# winedentity_medlem

./: .gitignore  Dockerfile  PROJECT_BRIEF.md  README.md  app.py  db.py  debug_qr.py  forms.py  main.py  messages.pot  pitch-text.md  pyproject.toml  requirements.txt  semantic.md  tests.py  winecard_example.html  wsgi.py
.github/workflows/: deploy.yml
static/: styles.css  uno.css
static/js/: main.js
templates/: base.jinja2  home.jinja2  index.html  index.jinja2  partner.jinja2  reg.jinja2  success.html  success.jinja2  wine_cards.jinja2
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/nb/LC_MESSAGES/: messages.mo  messages.po
winedentity/: __init__.py  countries.py  forms.py  main.py  mock_db.py  utils.py
winedentity/content/wine_cards/2025/: aarsmote.json
