[project]
name = "winedentity-medlem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "google-cloud-datastore>=2.21.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "qrcode[pil]>=8.2",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
include = ["winedentity"]
